manifests/deply-smarttv.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: smarttvapp
    app: smarttvapp
  name: hello3
spec:
  replicas: 10
  selector:
    matchLabels:
      release: hello3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        project: smarttvapp
        app: smarttvapp
        release: hello3
    spec:
      containers:
        - image: nginx
          name: nginx
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: smarttvapp
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: smarttvapp
---
apiVersion: v1
kind: Service
metadata:
  name: smarttvapp-node
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: smarttvapp-node
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webservers
spec:
  rules:
    - host: smarttv.192.168.1.102.xip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: smarttv
              servicePort: 90
